<resources>
    <string name="app_name">JustDoIt!</string>
    <string name="title_home">Todo</string>
    <string name="title_dashboard">Checked</string>
    <string name="title_notifications">Notifications</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register"><u><![CDATA[<- Register here]]></u></string>
    <string name="welcome">Welcome!</string>
    <string name="please_enter_your_username_and_password">Please enter your username and password</string>
    <string name="app_quote">Make managing task easier</string>
    <string name="registerq">Register</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_here"><u><![CDATA[<- Login here]]></u></string>
    <string name="greeting">Hi, </string>
    <string name="greeting2">Here\'s some things to do</string>
    <string name="subject_task_list_example">Subject task list example</string>
    <string name="task_list_example">Task list example</string>
    <string name="edit">Edit</string>
    <string name="greeting4">Here\'s list of things you\'ve done</string>
    <string name="greeting3">Great job, </string>
    <string name="ic_add">ic_add</string>
    <string name="add_new_task">Add new task</string>
    <string name="task">Task</string>
    <string name="task_hint">things you want to do....</string>
    <string name="subject">Subject</string>
    <string name="subject_hint">the subject…</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="sarangtawon897_gmail_com">sarangtawon897@gmail.com</string>
    <string name="app_developer">Sendiko</string>
    <string name="save">save</string>
    <string name="swipe_to_refresh">swipe to refresh</string>
    <string name="your_name">Your name</string>
    <string name="may_we_know_your_name">May we know your name?</string>
    <string name="change_name">Change name</string>
    <string name="contact">Contact</string>
    <string name="display_mode">Display Mode</string>
    <string name="languages">Languages</string>
    <string name="change_language">Change language</string>
    <string name="english">English</string>
    <string name="indonesian">Indonesian</string>
    <string name="change_theme">Change theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="name">Name</string>
    <string name="update_title">Update task</string>
    <string name="update_button">Update</string>
    <string name="task_empty_error">Task can\'t be empty</string>
    <string name="update">Update</string>
    <string name="nama_error_empty">Name can\'t be empty</string>
    <string name="close_dialog">Close</string>
    <string name="had_to_do_it_now">HAD TO DO IT NOW</string>
    <string name="need_to_be_done">Need to be done</string>
    <string name="can_do_it_anytime">Can do it anytime</string>
    <string name="priority">Priority</string>
    <string name="priority_error">You have to choose one priority</string>
    <string name="clear_filter"><u>clear filter</u></string>
    <string name="filter_important">Filter : Important</string>
    <string name="filter_need_to_be_done">Filter : Need to be done</string>
    <string name="filter_can_do_it_anytime">Filter : Can do it anytime</string>
    <string name="delete_all_tasks">Delete all tasks?</string>
    <string name="delete_all">Delete all</string>
    <string name="your_task">Your task</string>
</resources>