<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.task.InputTaskFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/indigo_dye"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textSize="24sp"
                android:fontFamily="@font/nunito_bold"
                android:textColor="@color/white"
                android:text="@string/add_new_task"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/label_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/task"
        android:textSize="20sp"
        android:layout_margin="32dp"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/indigo_dye"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:hintAnimationEnabled="false"
        app:expandedHintEnabled="false"
        android:background="@drawable/box_background"
        app:layout_constraintTop_toBottomOf="@id/label_task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_task"
            android:fontFamily="@font/nunito_semibold"
            android:textColor="@color/indigo_dye"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/label_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_task"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/subject"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/indigo_dye"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:hintAnimationEnabled="false"
        app:expandedHintEnabled="false"
        android:background="@drawable/box_background"
        app:layout_constraintTop_toBottomOf="@id/label_subject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_subject"
            android:fontFamily="@font/nunito_semibold"
            android:textColor="@color/indigo_dye"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="20sp"
        android:layout_margin="32dp"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/indigo_dye"
        app:layout_constraintTop_toBottomOf="@id/layout_subject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/text_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/cancel"
        android:layout_margin="32dp"
        android:textColor="@color/indigo_dye"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_add"
        app:layout_constraintTop_toBottomOf="@id/layout_subject"/>

</androidx.constraintlayout.widget.ConstraintLayout>