<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.dialog.language.LanguageDialogFragment"
    android:background="@drawable/bottom_sheet_background">

    <View
        android:id="@+id/drag_indicator"
        android:layout_width="96dp"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/drag_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/change_language"
        android:textColor="@color/indigo_dye"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drag_indicator" />

    <RadioGroup
        android:id="@+id/languages_checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/header_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/language_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:fontFamily="@font/nunito_medium"
            android:textSize="18sp"
            android:textColor="@color/indigo_dye"
            android:drawableStart="@drawable/ic_language"
            android:drawableEnd="@drawable/ic_check_fluid"
            android:drawablePadding="8dp"
            android:soundEffectsEnabled="false"
            android:button="@android:color/transparent"/>

        <RadioButton
            android:id="@+id/language_indonesian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/indonesian"
            android:fontFamily="@font/nunito_medium"
            android:textSize="18sp"
            android:textColor="@color/indigo_dye"
            android:drawableStart="@drawable/ic_language"
            android:drawableEnd="@drawable/ic_check_fluid"
            android:drawablePadding="8dp"
            android:button="@android:color/transparent"/>

    </RadioGroup>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/change_language"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languages_checkbox" />

</androidx.constraintlayout.widget.ConstraintLayout>